--- a/frontend/public/locales/vi/translation.json
+++ b/frontend/public/locales/vi/translation.json
@@ -1,7 +1,7 @@
 {
   "home": "Trang chủ",
   "change_language": "Thay đổi ngôn ngữ",
-  
+
   "email": "Email",
   "password": "Mật khẩu",
   "sign_in": "Đăng Nhập",
@@ -10,6 +10,7 @@
   "invalid_credentials": "Email hoặc mật khẩu chưa đúng",
   "login_failed": "Đăng nhập thất bại",
   "trust_this_device": "Lưu thông tin",
+  "log_in_as": "Đăng nhập với tư cách là:",
 
   "need_account": "Cần 1 tài khoản",
   "sign_up": "Đăng Ký",
@@ -21,6 +22,13 @@
   "password_confimation": "Xác nhận mật khẩu",
   "registration_failed": "Đăng ký thất bại",
 
+  "logout": "Đăng xuất",
+
   "not_found_message": "Trang bạn đang tìm kiếm có thể đã bị xóa do đã thay đổi tên hoặc tạm thời không khả dụng",
-  "go_back": "Trở về"
+  "go_back": "Trở về",
+
+  "unauthorized_message": "Bạn không có quyền truy cập vào trang được yêu cầu.",
+
+  "view_profile": "Trang cá nhân",
+  "account": "Tài khoản"
 }
