--- a/frontend/public/locales/zh/translation.json
+++ b/frontend/public/locales/zh/translation.json
@@ -95,5 +95,21 @@
 
   "updatingQuestionAudios": "正在更新问题音频...",
   "updatedQuestionAudiosSuccessfully": "问题音频更新成功！",
-  "errorUpdatingQuestionAudios": "更新问题音频时出错"
+  "errorUpdatingQuestionAudios": "更新问题音频时出错",
+
+  "deletingQuestionGroup": "正在删除问题组...",
+  "deletedQuestionGroupSuccessfully": "问题组删除成功！",
+  "failedToDeleteQuestionGroup": "删除问题组失败",
+
+  "deleteQuestionGroup": "删除问题组",
+  "confirmDeleteQuestionGroup": "您确定要删除这个问题组吗？",
+
+  "nothingIsMorePreciousThanIndependenceAndFreedom": "没有什么比独立和自由更珍贵",
+
+  "answer": "答案",
+
+  "uploadAudio": "上传音频",
+  "changeAudio": "更改音频",
+  
+  "uploadAnswersTextFile": "上传答案文本文件"
 }
