Backend - change explanation text to question bundle

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -119,5 +119,7 @@
   "historyChanges": "History changes",
 
   "nothingIsMorePreciousThanIndependenceAndFreedom": "Nothing is more precious than independence and freedom.",
-  "whatWeAreTheWorldIs": "What we are, the world is."
+  "whatWeAreTheWorldIs": "What we are, the world is.",
+
+  "transcripts": "Transcripts"
 }
