--- a/frontend/public/locales/vi/translation.json
+++ b/frontend/public/locales/vi/translation.json
@@ -120,5 +120,7 @@
   "historyChanges": "Lịch sử thay đổi",
 
   "nothingIsMorePreciousThanIndependenceAndFreedom": "Không có gì quý hơn độc lập, tự do.",
-  "whatWeAreTheWorldIs": "Chúng ta thế nào, thế giới thế ấy."
+  "whatWeAreTheWorldIs": "Chúng ta thế nào, thế giới thế ấy.",
+
+  "transcripts": "Lời giải thích"
 }
