--- a/frontend/public/locales/zh/translation.json
+++ b/frontend/public/locales/zh/translation.json
@@ -119,5 +119,7 @@
   "historyChanges": "更改历史",
 
   "nothingIsMorePreciousThanIndependenceAndFreedom": "没有什么比独立和自由更珍贵",
-  "whatWeAreTheWorldIs": "我们是什么，世界就是什么。"
+  "whatWeAreTheWorldIs": "我们是什么，世界就是什么。",
+
+  "transcripts": "文字记录"
 }
