Frontend - Create Content Manager (layout) - User Vocabulary Practice statuses Backend  - User Vocabulary Practice statuses

--- a/frontend/public/locales/vi/translation.json
+++ b/frontend/public/locales/vi/translation.json
@@ -134,7 +134,7 @@
   "nothingIsMorePreciousThanIndependenceAndFreedom": "Không có gì quý hơn độc lập, tự do.",
   "whatWeAreTheWorldIs": "Chúng ta thế nào, thế giới thế ấy.",
 
-  "transcripts": "Lời giải thích",
+  "transcripts": "Giải thích",
 
   "createNewVocabularyTopic": "Tạo chủ đề từ vựng mới",
   "enterWordsInThisBox": "Nhập các từ vào ô này",
