Frontend - Custom Area Text

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -159,6 +159,8 @@
 
   "enterTopicName": "Enter topic name",
 
+  "paragraph": "Paragraph",
+
   "quote1": "Nothing is more precious than independence and freedom.",
   "quote2": "What we are, the world is.",
   "quote3": "If you set your goals ridiculously high and it's a failure, you will fail above everyone else's success.",
