--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -161,6 +161,23 @@
 
   "paragraph": "Paragraph",
 
+  "uploadingAvatar": "Uploading avatar...",
+  "uploadAvatarSuccess": "Avatar uploaded successfully!",
+  "uploadAvatarFailed": "Failed to upload avatar.",
+
+  "savingAvatar": "Saving avatar...",
+  "saveAvatarSuccess": "Avatar saved successfully!",
+  "saveAvatarFailed": "Failed to save avatar.",
+
+  "lastName": "Last Name",
+  "firstName": "First Name",
+  "phoneNumber": "Phone Number",
+
+  "change": "Change",
+  "saveChanges": "Save Changes",
+  "changeAvatar": "Change Avatar",
+  "confirmChangeAvatar": "Are you sure you want to change the avatar?",
+
   "quote1": "Nothing is more precious than independence and freedom.",
   "quote2": "What we are, the world is.",
   "quote3": "If you set your goals ridiculously high and it's a failure, you will fail above everyone else's success.",
