--- a/frontend/public/locales/zh/translation.json
+++ b/frontend/public/locales/zh/translation.json
@@ -193,6 +193,15 @@
   "confirmDeleteAccount": "您确定要删除此账户吗？",
   "manageAccount": "管理账户",
 
+  "totalTime": "总时间",
+  "totalQuestions": "总问题数",
+  "review": "复习",
+  "continued": "继续",
+  "practiceNow": "立即练习",
+  "restart": "重新开始",
+  "incorrect": "错误",
+  "correct": "正确",
+
   "quote1": "没有什么比独立和自由更珍贵",
   "quote2": "我们是什么，世界就是什么。",
   "quote3": "如果你设定的目标高得离谱却失败了，你的失败也会超越他人的成功。",
